Added calculate diff func